--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.3.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "react-scroll-parallax": "^2.4.3",
     "web-vitals": "^2.1.3"
   },
